--- a/src/scss/_page-styles.scss
+++ b/src/scss/_page-styles.scss
@@ -303,8 +303,8 @@ a.snippet {
 
 .snippet__description {
 	font-size: 0.85em;
-	margin: 1em 0 0 0;
-	letter-spacing: 0.15em;
+	margin: rem-calc(16 -3 0 0);
+	letter-spacing: rem-calc(3);
 }
 
 // post meta
@@ -313,7 +313,8 @@ p.post-meta {
 	color: $secondary-color-light-43;
 	font-size: rem-calc(12);
 	text-transform: uppercase;
-	letter-spacing: 3px;
+	letter-spacing: rem-calc(3);
+	margin-right: rem-calc(-3);
 
 	a {
 
