--- a/src/scss/_whats-on.scss
+++ b/src/scss/_whats-on.scss
@@ -132,7 +132,7 @@
 		width: 50%;
 
 		.icon {
-			margin-top: rem-calc(-3px);
+			margin-top: rem-calc(-3);
 			margin-right: rem-calc(5);
 		}
 
